<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <TextView
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:id="@+id/txt_inscrip"
        android:textSize="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:text="@string/inscription"/>
    <LinearLayout

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_inscrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:background="@drawable/edit_txt"
        android:padding="10dp"
        android:id="@+id/ll_nomComplet">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_person_gray"
            android:layout_marginEnd="5dp"/>
        <EditText
            style="@style/style_edt"
            android:hint="@string/nomComplet"
            android:id="@+id/edt_nomComplet"
            android:inputType="text" />

    </LinearLayout>
    <LinearLayout

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_nomComplet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:background="@drawable/edit_txt"
        android:padding="10dp"
        android:id="@+id/ll_username">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_person_gray"
            android:layout_marginEnd="5dp"/>
        <EditText
            style="@style/style_edt"
            android:hint="@string/username"
            android:id="@+id/edt_username"
            android:inputType="text" />

    </LinearLayout>
    <LinearLayout

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:background="@drawable/edit_txt"
        android:padding="10dp"
        android:id="@+id/ll_telephone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_local_phone_24"
            android:layout_marginEnd="5dp"/>
        <EditText
            style="@style/style_edt"
            android:hint="@string/telephone"
            android:id="@+id/edt_telephone"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:background="@drawable/edit_txt"
        android:padding="10dp"
        android:id="@+id/ll_email">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_email_24"
            android:layout_marginEnd="5dp"/>
        <EditText
            style="@style/style_edt"
            android:hint="@string/Email"
            android:id="@+id/edt_email"
            android:inputType="textEmailAddress" />

    </LinearLayout>
    <LinearLayout

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:background="@drawable/edit_txt"
        android:padding="10dp"
        android:id="@+id/ll_mdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_lock_24"
            android:layout_marginEnd="5dp"/>
        <EditText
            style="@style/style_edt"
            android:hint="@string/MotDePasse"
            android:id="@+id/edt_mdp"
            android:inputType="textPassword" />

    </LinearLayout>
    <Button
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_mdp"
        android:text="@string/inscrire"
        android:id="@+id/btn_inscription"
        style="@style/style_btn"
     />
    <TextView
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_inscription"
        android:id="@+id/txt_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/compteExistant"/>

    <TextView
        android:id="@+id/txt_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:text="@string/se_connecter"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/txt_connect"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_inscription"
        android:textColor="@color/jaune"/>

</androidx.constraintlayout.widget.ConstraintLayout>