<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"
        android:background="@color/blue"
        android:id="@+id/rl_actionbar"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_back"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            />
        <TextView
            style="@style/style_tv_toolbar"
            android:text="@string/tv_login"
            android:layout_toEndOf="@+id/image_back"
          />
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatImageView
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_actionbar"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/login"
        android:layout_marginEnd="5dp"
        android:id="@+id/login"/>

    <LinearLayout

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:background="@drawable/edit_txt"
        android:padding="10dp"
        android:id="@+id/ll_username">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_person_gray"
            android:layout_marginEnd="5dp"/>
        <EditText
            style="@style/style_edt"
            android:hint="@string/username"
            android:id="@+id/edt_username_login"
            android:inputType="text" />

    </LinearLayout>
    <LinearLayout

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:background="@drawable/edit_txt"
        android:padding="10dp"
        android:id="@+id/ll_password">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_lock_24"
            android:layout_marginEnd="5dp"/>
        <EditText
            style="@style/style_edt"
            android:hint="@string/MotDePasse"
            android:id="@+id/edt_password_login"
            android:inputType="textPassword"
         />

    </LinearLayout>
    <TextView
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_password"
        android:id="@+id/txt_mdp_oublie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/MdpOublié"/>

    <Button
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_mdp_oublie"
        android:text="@string/connexion"
        android:id="@+id/btn_connexion"
        style="@style/style_btn"
      />
    <TextView
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_connexion"
        android:id="@+id/txt_inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pas_de_compte"/>

    <TextView
        android:id="@+id/txt_incri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:text="@string/inscrire"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/txt_inscription"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_connexion"
        android:textColor="@color/jaune"/>
</androidx.constraintlayout.widget.ConstraintLayout>