<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_above="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="20dp"
                android:id="@+id/recycler_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView

                android:text="@string/tv_mode"
                style="@style/style_tv"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:text="@string/tv_parfums_maquillages"
                style="@style/style_tv"/>

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/recyclerview_maquillage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="@string/tv_bebe"
                style="@style/style_tv"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="1dp"
                android:id="@+id/recyclerview_bebe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="@string/tv_superette"
                style="@style/style_tv"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_superette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:labelVisibilityMode="labeled"
        app:itemIconSize="24dp"
        app:menu="@menu/menu"
        app:itemIconTint="@color/blue"
        app:itemTextColor="@color/blue"
        />
</RelativeLayout>